# silero-vad

./: .gitignore  README.md
examples/c++/: silero.cc
examples/cpp/: CMakeLists.txt  silero-vad-onnx.cpp
